# NCage

./: CMakeLists.txt
res/: fragment_shader  vertex_shader
src/: BackgroundWorker.cpp  BackgroundWorker.h  GuiManager.cpp  GuiManager.h  ProjectionManager.cpp  ProjectionManager.h  main.cpp
src/common/: BackgroundWorker.h  Logger.cpp  Logger.h
src/common/gui/: GuiManager.cpp  GuiManager.h  GuiTextureView.cpp  GuiTextureView.h  TextureDisplay.cpp  TextureDisplay.h
src/common/utils/: FileIO.cpp  FileIO.h  SafeQueue.cpp  Vec2d.cpp  Vec2d.h  glutUtils.cpp  glutUtils.h  mathUtils.cpp  mathUtils.h
src/common/utils/events/: Event.h
src/events/: Event.cpp  Event.h
src/gui/: GuiBase.cpp  GuiBase.h  GuiButton.cpp  GuiButton.h  GuiFactory.cpp  GuiFactory.h  GuiFrame.cpp  GuiFrame.h  GuiView.cpp  GuiView.h  GuiWindow.cpp  GuiWindow.h  ProjectionManager.cpp  ProjectionManager.h
src/gui/VBOTest/: VBOMesh.cpp  VBOMesh.h  VBOTest.cpp  VBOTest.h
src/gui/render/: RenderManager.cpp  RenderManager.h  RenderPrimitive.h  ShaderLoader.cpp  ShaderLoader.h  Vertex.h
src/gui/resources/: constants.h
src/gui/utils/: AttributeStack.cpp  AttributeStack.h  ComplexTexture.cpp  ComplexTexture.h  FBTexture.cpp  FBTexture.h  GuiBase.cpp  GuiBase.h  GuiFactory.cpp  GuiFactory.h  PBOTexture.cpp  PBOTexture.h  ProjectionManager.cpp  ProjectionManager.h
src/resources/: constants.h
src/test/: test.cpp  unit_test.h
src/utils/: SafeQueue.h  Vec2d.cpp  Vec2d.h  glutUtils.cpp  glutUtils.h  mathUtils.cpp  mathUtils.h  thread_factory.cpp  thread_factory.h
